buildscript {
	ext {
		springBootVersion = '3.3.2'
		set('springCloudVersion', "2023.0.3")
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

buildscript {
	repositories {
		maven {
			url "https://plugins.gradle.org/m2/"
		}
	}
}

plugins {
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.springframework.boot' version '3.3.2'
	id "org.sonarqube" version "5.0.0.4638"
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'jacoco'

//added to accept systemproperties while executing gradlew test cmd
test {
	systemProperties = System.properties
	jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
	jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"

}

jar {
	archiveBaseName = 'scsb-doc'
	archiveVersion = '0.0.1-SNAPSHOT'
}
sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21


repositories {
	mavenCentral()
}


dependencies {
	implementation fileTree(dir: '/data/commonjar', include: '*2.8.jar')
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.4.3'
	implementation('org.springframework.data:spring-data-solr:4.3.15')
			{exclude module: 'solr-solrj'; exclude module: 'solr-data-commons'; exclude module: 'spring-data-jpa'}
	implementation 'org.apache.solr:solr-solrj:9.6.1'
	implementation 'org.apache.camel:camel-solr:4.0.0-M2'
	implementation 'org.apache.camel:camel-bindy:4.4.3'
	implementation 'org.apache.camel:camel-metrics:4.4.3'
	implementation 'org.apache.camel:camel-csv:4.4.3'
	implementation 'org.apache.camel:camel-mail:4.4.3'
	implementation 'org.apache.camel:camel-ftp:4.4.3'
	implementation 'org.apache.camel:camel-activemq:4.4.3'
	implementation('org.apache.camel.springboot:camel-aws-s3-starter:3.8.0')
	implementation('org.apache.camel:camel-aws-s3:3.8.0')
	implementation 'org.apache.activemq:activemq-camel:5.16.7'
	implementation 'org.apache.activemq:activemq-pool:6.1.2'
	implementation 'org.apache.activemq:activemq-broker:6.1.2'
	implementation 'org.apache.activemq:activemq-client-jakarta:6.1.0' exclude module:"activemq-client"
	implementation 'commons-beanutils:commons-beanutils:1.9.4'
	implementation 'org.apache.commons:commons-collections4:4.5.0-M2'
	implementation 'info.freelibrary:freelib-marc4j:2.6.12'
	implementation 'net.sourceforge.javacsv:javacsv:2.0'
	implementation 'commons-codec:commons-codec:1.15'
	implementation 'org.codehaus.jettison:jettison:1.5.4'
	implementation 'junit:junit:4.13.2'
	implementation('com.google.guava:guava:33.2.1-jre') {exclude module: "solr-solrj"}
	implementation 'org.projectlombok:lombok:1.18.32'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation('org.apache.commons:commons-text:1.12.0');
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation group: 'org.json', name: 'json', version: '20240303'
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
	implementation('org.apache.poi:poi-ooxml:5.3.0');
	implementation group: 'org.apache.camel', name: 'camel-jms', version: '4.4.3'
	implementation 'io.zipkin.brave:brave:6.0.3'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testImplementation 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.1.0'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
	implementation('javax.validation:validation-api:2.0.1.Final')
	implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
	implementation 'com.sun.mail:smtp:2.0.1'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'

	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
	testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
	testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'

	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.springframework:spring-context:6.1.8'
//	implementation 'javax.annotation:javax.annotation-api:1.3.2'
	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'

	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'

}

configurations.all {
	resolutionStrategy.eachDependency { DependencyResolveDetails details ->
		if (details.requested.group == 'org.apache.logging.log4j') {
			details.useVersion '3.0.0-beta2'
		}
	}
	exclude group: 'javax.annotation', module: 'jsr250-api'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

eclipse {
	classpath {
		containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
		containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
	}
}


test {
	jacoco {
		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
		classDumpDir = file("$buildDir/jacoco/classpathdumps")
	}
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}

jacoco {
	toolVersion = "0.8.12"
	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

task scsbDocJavadocs(type: Javadoc) {
	source = sourceSets.main.java
	classpath = configurations.implementation
	options.addStringOption('Xdoclint:none', '-quiet')
	String home = System.getProperty("user.home");
	destinationDir = new File(home+"/scsb-javadocs/scsb-doc");
}

tasks.named('bootJar') {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

jar {
	enabled = false
	archiveClassifier = '' //use empty string
}

sonarqube {
	properties {
		property 'sonar.exclusions', "**/org/springframework/data/solr/core/convert/MappingSolrConverter.java";
	} }